# ProjectCafeteria

./: .gitignore  CMakeLists.txt  README.md
C++/: CMakeLists.txt  coffee_order.h  console.h  database.cpp  database.h  exceptions.h  main.cpp  menu_cache.h  order_builder.h  order_result.h  server.h  tests.cpp
HTML/: index.html
PostgreSQL/: cafeteria_database.sql
